Version 5.0.3

  Bugs fixed
  ----------
  Bug #23687 Deleting a connection to a disconnected server causes a failed assertion 
  Bug #24565 Inferring DbType fails when reusing commands and the first time the value is nul 

  Other changes
  -------------
  SSL now working.  [Thanks Alessandro Muzzetta]
  Fixed ViewColumns GetSchema collection

Version 5.0.2 11-3-2006

  Bugs fixed
  ----------
  Bug #23268 System.FormatException when invoking procedure with ENUM input parameter 	
  Bug #23538 Exception thrown when GetSchemaTable is called and "fields" is null. 
  Bug #23245 Connector Net 5.01 Beta Installer produces Antivirus Error Message 
  Bug #23758 Unable to connect to any server - IPv6 related 
  Bug #22882 Registry key 'Global' access denied 
  Bug #18186 Problem with implementation of PreparedStatement  
  Bug #23657 Column names with accented characters were not parsed properly causing malformed column names in result sets.
  Bug #16126 Connector/NET did not work as a data source for the SqlDataSource object used by ASP.NET 2.0.
 
  Other changes
  -------------
  Increased speed of MySqlParameterCollection.IndexOf(string) orders of magnitude
  (parameter name lookups are now strict on use of parameter marker)
  Improved character set mappings
  Turned MySqlPoolManager into a static class and added a static ctor to
    avoid any race conditions related to initializing the hashtable.
    (A similar suggestion came in from a user)
  Added 'Ignore Prepare' connection string option for disabling prepared
    statements application-wide
  Added Installer class to provide custom install type procedures such as modifying
    machine.config
  A nicer exception is displayed if you have added a parameter without the parameter marker.
  Load Data Local InFile is working again         
         
Version 5.0.1 (Beta)

  Bugs fixed
  ----------
  Bug #21521 # Symbols not allowed in column/table names.    